build_out.txt
[1/2] Building CXX object game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj
FAILED: [code=1] game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj 
C:\msys64\mingw64\bin\g++.exe  -IE:/projects/top-down-game-engine-ai/game_demo/src -IE:/projects/top-down-game-engine-ai/engine/include -IE:/projects/top-down-game-engine-ai/third_party -g -std=c++17 -Wall -Wextra -Wpedantic -MD -MT game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj -MF game_demo\CMakeFiles\game_demo.dir\src\Scenes\GameScene.cpp.obj.d -o game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj -c E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp
In file included from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.hpp:2,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp:1:
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp: In member function 'virtual void engine::IScene::handleEvent(engine::GameEngine&, const sf::Event&)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp:17:50: warning: unused parameter 'engine' [-Wunused-parameter]
   17 |     virtual void handleEvent(engine::GameEngine& engine, const sf::Event& event) {}
      |                              ~~~~~~~~~~~~~~~~~~~~^~~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp:17:75: warning: unused parameter 'event' [-Wunused-parameter]
   17 |     virtual void handleEvent(engine::GameEngine& engine, const sf::Event& event) {}
      |                                                          ~~~~~~~~~~~~~~~~~^~~~~
In file included from E:/projects/top-down-game-engine-ai/engine/include/engine/Components/VelocityComponent.hpp:2,
                 from E:/projects/top-down-game-engine-ai/engine/include/engine/Collision/CollisionSystem.hpp:3,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.hpp:5:
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp: In member function 'virtual void engine::Component::onAttach(engine::Entity&)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:13:35: warning: unused parameter 'owner' [-Wunused-parameter]
   13 |     virtual void onAttach(Entity& owner) {}
      |                           ~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp: In member function 'virtual void engine::Component::update(engine::Entity&, engine::GameEngine&, float)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:33: warning: unused parameter 'owner' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                         ~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:52: warning: unused parameter 'engine' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                                        ~~~~~~~~~~~~^~~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:66: warning: unused parameter 'dt' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                                                            ~~~~~~^~
E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp: In member function 'void GameScene::spawnEnemies(engine::GameEngine&)':
E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp:151:67: error: 'class engine::Tilemap' has no member named 'columns'
  151 |         float px = 32.f * (5.f + (rand() % std::max(1, (m_tilemap.columns() - 10))));
      |                                                                   ^~~~~~~
ninja: build stopped: subcommand failed.
